[package]
name = "rustp2p"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
hex = "0.4.3"
indicatif = "0.17.8"
log = "0.4.22"
sha2 = "0.10.8"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
clippy = "0.0.302"
